gl33-master/src/test/deca/syntax/invalid/others/elseFausse.deca
/*
Test sur le syntaxe de else

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
  boolean a = true;
  if(a){
    print("hello");
  }

  eise{
    print("ah non");
  }
}
